# PyDog

./: .gitignore  LICENSE  Readme.md  RobotSim.py  RobotSim2.py  TODO.md
Bridges/: BridgeToPybullet.py  BridgeToWebots.py
MpcExample/: CartPole_MPC.ipynb  Fb_1-D_2U_MPC.ipynb  Fb_1-D_MPC.ipynb
RobotController/: GaitPatternGenerator.py  RobotCurves.py  RobotDynamics.py  RobotFullStateEstimate.py  RobotGaitControl.py  RobotKinematics.py  RobotMPC.py  RobotPosVelEstimate.py  RobotStateEstimate.py  RobotSteer.py  RobotTask.py  RobotTerrainEstimate.py  RobotTrjPlanner.py  RobotVMC.py  RobotWBC.py  RobotWBIC.py
RobotController/cpp/: CMakeLists.txt  MathTools.h  QPSolver.cpp  QPSolver.h  RobotMPC.cpp  RobotMPC.h  RobotMPCWrapper.cpp  TestMPC.cpp  TestQPOASES.cpp  benchmark.txt
StateEstTuning/: Tuning_EKF.ipynb
Tests/: TestGaitGenerator.py  TestKinematics.py  TestMPC.py  TestPinocchio.py  TestPinocchioSimple.py  TestRobotCurves.py  TestStateEstimate.py  TestVMC.py  TestWBC.py  TestWBIC.py
Tests/MpcExample/: CartPole_MPC.ipynb  Fb_1-D_2U_MPC.ipynb  Fb_1-D_MPC.ipynb
Tests/StateEstTuning/: TuningFullStateEst.ipynb  TuningPosVelStateEst.ipynb  Tuning_EKF.ipynb
models/a1/: a2_pino.urdf  fb.urdf
